--- a/composer.json
+++ b/composer.json
@@ -28,22 +28,22 @@
         "psr/http-message": "^1.0.1",
         "psr/http-server-middleware": "^1.0",
         "zendframework/zend-diactoros": "^1.3.10",
-        "zendframework/zend-expressive-router": "^3.0.0alpha3",
+        "zendframework/zend-expressive-router": "^3.0.0rc2",
         "zendframework/zend-expressive-template": "^2.0.0alpha1",
         "zendframework/zend-httphandlerrunner": "^1.0.1",
-        "zendframework/zend-stratigility": "^3.0.0alpha4"
+        "zendframework/zend-stratigility": "^3.0.0rc1"
     },
     "require-dev": {
         "filp/whoops": "^1.1.10 || ^2.1.13",
         "malukenho/docheader": "^0.1.6",
         "mockery/mockery": "^1.0",
         "phpstan/phpstan": "^0.9.2",
-        "phpstan/phpstan-strict-rules": "^0.9.0",
+        "phpstan/phpstan-strict-rules": "^0.9",
         "phpunit/phpunit": "^7.0.1",
         "zendframework/zend-coding-standard": "~1.0.0",
-        "zendframework/zend-expressive-aurarouter": "^3.0.0alpha2",
-        "zendframework/zend-expressive-fastroute": "^3.0.0alpha1",
-        "zendframework/zend-expressive-zendrouter": "^3.0.0alpha1",
+        "zendframework/zend-expressive-aurarouter": "^3.0.0rc2",
+        "zendframework/zend-expressive-fastroute": "^3.0.0rc2",
+        "zendframework/zend-expressive-zendrouter": "^3.0.0rc2",
         "zendframework/zend-servicemanager": "^2.7.8 || ^3.3"
     },
     "conflict": {
