Added conflict in composer.json with zendframework/zend-diactoros <1.7.1
Version 1.7.1 contains PSR-7 implementation hotfix, to return host name
always lowercase, which follows IETF RFC 3986 section 3.2.2
(requires that the host name be normalized to lowercase)

--- a/composer.json
+++ b/composer.json
@@ -47,7 +47,8 @@
         "zendframework/zend-servicemanager": "^2.7.8 || ^3.3"
     },
     "conflict": {
-        "container-interop/container-interop": "<1.2.0"
+        "container-interop/container-interop": "<1.2.0",
+        "zendframework/zend-diactoros": "<1.7.1"
     },
     "suggest": {
         "filp/whoops": "^2.1 to use the Whoops error handler",
