--- a/.travis.yml
+++ b/.travis.yml
@@ -31,7 +31,7 @@ matrix:
     - php: 7
       env:
         - DEPS=locked
-        - LEGACY_DEPS="phpunit/phpunit symfony/debug"
+        - LEGACY_DEPS="phpunit/phpunit symfony/console symfony/debug"
     - php: 7
       env:
         - DEPS=latest
