--- a/composer.json
+++ b/composer.json
@@ -74,6 +74,9 @@
             "dev-master": "2.1.x-dev",
             "dev-develop": "2.2.x-dev",
             "dev-release-3.0.0": "3.0.x-dev"
+        },
+        "zf": {
+            "config-provider": "Zend\\Expressive\\ConfigProvider"
         }
     },
     "bin": [
