--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,7 @@
         "zendframework/zend-diactoros": "^1.3.10",
         "zendframework/zend-expressive-router": "^2.4.1",
         "zendframework/zend-expressive-template": "^1.0.4",
-        "zendframework/zend-stratigility": "^2.2.0rc3"
+        "zendframework/zend-stratigility": "^2.2.0"
     },
     "require-dev": {
         "filp/whoops": "^2.1.6 || ^1.1.10",
