--- a/composer.json
+++ b/composer.json
@@ -71,9 +71,8 @@
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "2.1.x-dev",
-            "dev-develop": "2.2.x-dev",
-            "dev-release-3.0.0": "3.0.x-dev"
+            "dev-master": "2.2.x-dev",
+            "dev-develop": "3.0.x-dev"
         },
         "zf": {
             "config-provider": "Zend\\Expressive\\ConfigProvider"
