--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,8 +4,7 @@ pages:
     - index.md
     - 'Getting Started':
         - 'Overview and Features': v3/getting-started/features.md
-        - 'Quick Start: Standalone': v3/getting-started/standalone.md
-        - 'Quick Start: Skeleton Installer': v3/getting-started/skeleton.md
+        - 'Quick Start': v3/getting-started/quick-start.md
     - Features:
         - "Middleware Types": v3/features/middleware-types.md
         - Applications: v3/features/application.md
@@ -13,12 +12,15 @@ pages:
             - Introduction: v3/features/container/intro.md
             - 'Container Factories': v3/features/container/factories.md
             - 'Delegator Factories': v3/features/container/delegator-factories.md
+            - 'The Middleware Container': v3/features/container/middleware-container.md
+            - 'The Middleware Factory': v3/features/container/middleware-factory.md
             - 'Using zend-servicemanager': v3/features/container/zend-servicemanager.md
             - 'Using Pimple': v3/features/container/pimple.md
             - 'Using Aura.Di': v3/features/container/aura-di.md
         - 'Routing Adapters':
             - Introduction: v3/features/router/intro.md
             - 'Routing Interface': v3/features/router/interface.md
+            - 'The Route Collector': v3/features/router/route-collector.md
             - 'URI Generation': v3/features/router/uri-generation.md
             - 'Routing vs Piping': v3/features/router/piping.md
             - 'Using Aura': v3/features/router/aura.md
@@ -27,14 +29,16 @@ pages:
         - Templating:
             - Introduction: v3/features/template/intro.md
             - 'Template Renderer Interface': v3/features/template/interface.md
-            - 'Templated Middleware': v3/features/template/middleware.md
+            - 'Templated Request Handlers': v3/features/template/request-handlers.md
             - 'Using Plates': v3/features/template/plates.md
             - 'Using Twig': v3/features/template/twig.md
             - 'Using zend-view': v3/features/template/zend-view.md
         - 'Error Handling': v3/features/error-handling.md
         - 'Modular Applications': v3/features/modular-applications.md
         - Middleware:
+            - 'Routing and Dispatch Middleware': v3/features/middleware/routing-and-dispatch-middleware.md
             - 'Implicit HEAD and OPTIONS Middleware': v3/features/middleware/implicit-methods-middleware.md
+            - 'Returning Method Not Allowed': v3/features/middleware/method-not-allowed-middleware.md
         - Helpers:
             - Introduction: v3/features/helpers/intro.md
             - UrlHelper: v3/features/helpers/url-helper.md
@@ -52,13 +56,11 @@ pages:
         - 'Setting a locale based on a routing parameter': v3/cookbook/setting-locale-depending-routing-parameter.md
         - 'Setting a locale without a routing parameter': v3/cookbook/setting-locale-without-routing-parameter.md
         - 'Enabling debug toolbars': v3/cookbook/debug-toolbars.md
-        - 'Handling multiple routes in a single class': v3/cookbook/using-routed-middleware-class-as-controller.md
         - 'Flash Messengers': v3/cookbook/flash-messengers.md
         - 'Passing data between middleware': v3/cookbook/passing-data-between-middleware.md
     - Reference:
         - "Why choose Expressive?": v3/why-expressive.md
         - "CLI Tooling": v3/reference/cli-tooling.md
-        - Examples: v3/reference/usage-examples.md
         - 'Expressive Projects': v3/reference/expressive-projects.md
         - Migration: v3/reference/migration.md
     - v2:
