Update text to PSR-15 Middleware and PSR-7 HTTP Messages

--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "psr",
         "psr-7",
         "psr-11",
+        "psr-15",
         "expressive",
         "zf",
         "zendframework",
