--- a/composer.json
+++ b/composer.json
@@ -27,10 +27,10 @@
         "psr/container": "^1.0",
         "psr/http-message": "^1.0.1",
         "psr/http-server-middleware": "^1.0",
-        "zendframework/zend-expressive-router": "^3.0.0rc5",
-        "zendframework/zend-expressive-template": "^2.0.0alpha1",
+        "zendframework/zend-expressive-router": "^3.0",
+        "zendframework/zend-expressive-template": "^2.0",
         "zendframework/zend-httphandlerrunner": "^1.0.1",
-        "zendframework/zend-stratigility": "^3.0.0rc1"
+        "zendframework/zend-stratigility": "^3.0"
     },
     "require-dev": {
         "filp/whoops": "^1.1.10 || ^2.1.13",
@@ -41,9 +41,9 @@
         "phpunit/phpunit": "^7.0.1",
         "zendframework/zend-coding-standard": "~1.0.0",
         "zendframework/zend-diactoros": "^1.7.1",
-        "zendframework/zend-expressive-aurarouter": "^3.0.0rc3",
-        "zendframework/zend-expressive-fastroute": "^3.0.0rc4",
-        "zendframework/zend-expressive-zendrouter": "^3.0.0rc3",
+        "zendframework/zend-expressive-aurarouter": "^3.0",
+        "zendframework/zend-expressive-fastroute": "^3.0",
+        "zendframework/zend-expressive-zendrouter": "^3.0",
         "zendframework/zend-servicemanager": "^2.7.8 || ^3.3"
     },
     "conflict": {
@@ -55,7 +55,7 @@
         "psr/http-message-implementation": "Please install a psr/http-message-implementation to consume Expressive; e.g., zendframework/zend-diactoros",
         "zendframework/zend-auradi-config": "^1.0 to use Aura.Di dependency injection container",
         "zendframework/zend-expressive-helpers": "^3.0 for its UrlHelper, ServerUrlHelper, and BodyParseMiddleware",
-        "zendframework/zend-expressive-tooling": "For migration and development tools; require it with the --dev flag",
+        "zendframework/zend-expressive-tooling": "^1.0 for migration and development tools; require it with the --dev flag",
         "zendframework/zend-pimple-config": "^1.0 to use Pimple for dependency injection container",
         "zendframework/zend-servicemanager": "^3.3 to use zend-servicemanager for dependency injection"
     },
@@ -77,8 +77,8 @@
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "2.2.x-dev",
-            "dev-develop": "3.0.x-dev"
+            "dev-master": "3.0.x-dev",
+            "dev-develop": "3.1.x-dev"
         },
         "zf": {
             "config-provider": "Zend\\Expressive\\ConfigProvider"
