Updated package description
Removes Stratigility verbiage; that's an implementation detail.

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "zendframework/zend-expressive",
-    "description": "PSR-15 Middleware Microframework based on Stratigility",
+    "description": "PSR-15 Middleware Microframework",
     "license": "BSD-3-Clause",
     "keywords": [
         "http",
