--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -17,6 +17,7 @@ pages:
             - 'Using zend-servicemanager': v3/features/container/zend-servicemanager.md
             - 'Using Pimple': v3/features/container/pimple.md
             - 'Using Aura.Di': v3/features/container/aura-di.md
+            - 'Container configuration': v3/features/container/config.md
         - 'Routing Adapters':
             - Introduction: v3/features/router/intro.md
             - 'Routing Interface': v3/features/router/interface.md
