--- a/composer.json
+++ b/composer.json
@@ -49,7 +49,8 @@
     },
     "conflict": {
         "container-interop/container-interop": "<1.2.0",
-        "zendframework/zend-diactoros": "<1.7.1"
+        "zendframework/zend-diactoros": "<1.7.1",
+        "zendframework/zend-stdlib": "<3.2.1"
     },
     "suggest": {
         "filp/whoops": "^2.1 to use the Whoops error handler",
