docs: document the new TemplateVariableContainer and related middleware
Available since zend-expressive-helpers 5.3.0, these offer a stateless
alternative to TemplateRendererInterface::addDefaultParam()

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -46,6 +46,7 @@ pages:
             - ServerUrlHelper: v3/features/helpers/server-url-helper.md
             - 'Body Parsing Middleware': v3/features/helpers/body-parse.md
             - 'Content-Length Middleware': v3/features/helpers/content-length.md
+            - 'Template Variable Container': v3/features/helpers/template-variable-container.md
         - Emitters: v3/features/emitters.md
     - Cookbook:
         - 'Autowiring routes and pipeline middleware': v3/cookbook/autowiring-routes-and-pipelines.md
